# bootr

./: .gitignore  .readthedocs.yaml  Cargo.toml  Makefile  README.md
bootr.d/: bootr.conf  config
bootr.d/system/: oci-meta  state  status
doc/: README.md  conf.py  index.rst  overview.rst
src/: cli.rs  logger.rs  main.rs  ocidata.rs
src/bconf/: defaults.rs  mcfg.rs  mod.rs  scfg.rs
src/ociman/: installer.rs  mod.rs  ocidata.rs  ocimeta.rs  ocistate.rs  ocisys.rs
