[package]
name = "bootr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = [
    "string",
    "env",
    "unicode",
    "unstable-doc",
    "unstable-styles",
    "wrap_help",
] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
nix = { version = "0.29.0", features = [
    "kmod",
    "default",
    "mount",
    "hostname",
    "fs",
    "feature",
    "env",
    "dir",
    "aio",
    "acct",
    "inotify",
    "user",
    "zerocopy",
    "uio",
    "event",
    "fanotify",
    "ioctl",
    "mman",
    "mqueue",
    "net",
    "personality",
    "poll",
    "process",
    "pthread",
    "ptrace",
    "quota",
    "reboot",
    "resource",
    "sched",
    "socket",
    "term",
    "ucontext",
    "time",
] }
oci-distribution = { version = "0.11.0", features = ["trust-dns", "rustls-tls", "rustls-tls-native-roots"] }
tokio = { version = "1.38.0", features = ["bytes", "fs", "full", "io-util", "libc", "macros", "mio", "net", "num_cpus", "parking_lot", "process", "rt", "rt-multi-thread", "signal", "signal-hook-registry", "socket2", "sync", "test-util", "time", "tokio-macros", "tracing"] }

[profile.release]
strip = true
opt-level = "z"
lto = false
codegen-units = 1
panic = "abort"
