[package]
name = "bootr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = [
    "string",
    "env",
    "unicode",
    "unstable-doc",
    "unstable-styles",
    "wrap_help",
] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
indexmap = { version = "2.2.6", features = [
    "arbitrary",
    "borsh",
    "quickcheck",
    "rayon",
    "rustc-rayon",
    "serde",
] }
lazy_static = { version = "1.4.0", features = ["spin"] }
nix = { version = "0.29.0", features = [
    "kmod",
    "default",
    "mount",
    "hostname",
    "fs",
    "feature",
    "env",
    "dir",
    "aio",
    "acct",
    "inotify",
    "user",
    "zerocopy",
    "uio",
    "event",
    "fanotify",
    "ioctl",
    "mman",
    "mqueue",
    "net",
    "personality",
    "poll",
    "process",
    "pthread",
    "ptrace",
    "quota",
    "reboot",
    "resource",
    "sched",
    "socket",
    "term",
    "ucontext",
    "time",
] }
oci-distribution = { version = "0.11.0", features = [
    "trust-dns",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["alloc", "arbitrary_precision", "float_roundtrip", "indexmap", "preserve_order", "raw_value", "unbounded_depth"] }
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = [
    "bytes",
    "fs",
    "full",
    "io-util",
    "libc",
    "macros",
    "mio",
    "net",
    "num_cpus",
    "parking_lot",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "signal-hook-registry",
    "socket2",
    "sync",
    "test-util",
    "time",
    "tokio-macros",
    "tracing",
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
